Make order of listed chapters for authors increasing in authorlist

--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@ Things to fix
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
 * Change order of chapters: FSI after F and S                               OK
-* Fix order of chapters in author list                                     (AL)
+* Fix order of chapters in author list                                      OK
 
 Things to check
 ---------------
