--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -18,10 +18,10 @@
               from the Research Council of Norway to the Center for
               Biomedical Computing at Simula Research Laboratory.}
              {Chapters
-              \ref{chap:alnes-1},
-              \ref{chap:alnes-2},
-              \ref{chap:alnes-3} and
-              \ref{chap:wilbers}}
+              \ref{chap:wilbers},
+              \ref{chap:alnes-3},
+              \ref{chap:alnes-2} and
+              \ref{chap:alnes-1}}
 
 \fenicsauthor{Stuart R. Clark}
              {stuart@simula.no}
@@ -76,19 +76,19 @@
              {jhoffman@csc.kth.se}
              {School of Computer Science and Communication, KTH, Sweden}
              {}
-             {Chapters \ref{chap:hoffman-1} and \ref{chap:hoffman-2}}
+             {Chapters \ref{chap:hoffman-2} and \ref{chap:hoffman-1}}
 
 \fenicsauthor{Johan Jansson}
              {jjan@csc.kth.se}
              {School of Computer Science and Communication, KTH, Sweden}
              {}
-             {Chapters \ref{chap:hoffman-1} and \ref{chap:hoffman-2}}
+             {Chapters \ref{chap:hoffman-2} and \ref{chap:hoffman-1}}
 
 \fenicsauthor{Niclas Jansson}
              {njansson@csc.kth.se}
              {School of Computer Science and Communication, KTH, Sweden}
              {}
-             {Chapters \ref{chap:hoffman-1} and \ref{chap:hoffman-2}}
+             {Chapters \ref{chap:hoffman-2} and \ref{chap:hoffman-1}}
 
 \fenicsauthor{Claes Johnson}
              {cgjoh@csc.kth.se}
@@ -101,8 +101,15 @@
              {Department of Mathematics and Statistics, Texas Tech University, USA}
              {}
              {Chapters
-              \ref{chap:kirby-7}, \ref{chap:terrel}, \ref{chap:kirby-8}, \ref{chap:kirby-6}, \ref{chap:kirby-2},
-              \ref{chap:kirby-3}, \ref{chap:kirby-4}, \ref{chap:kirby-1} and \ref{chap:kirby-5}}
+              \ref{chap:kirby-7},
+              \ref{chap:kirby-6},
+              \ref{chap:kirby-1},
+              \ref{chap:kirby-5},
+              \ref{chap:kirby-8},
+              \ref{chap:kirby-4},
+              \ref{chap:kirby-3},
+              \ref{chap:kirby-2} and
+              \ref{chap:terrel}}
 
 \fenicsauthor{Matthew Gregg Knepley}
              {knepley@ci.uchicago.edu}
@@ -151,10 +158,18 @@
               the Center for Biomedical Computing at Simula Research
               Laboratory.}
              {Chapters
-              \ref{chap:alnes-2}, \ref{chap:kirby-3}, \ref{chap:kirby-4},
-              \ref{chap:kirby-5}, \ref{chap:kirby-6}, \ref{chap:kirby-7},
-              \ref{chap:kirby-8}, \ref{chap:kvs-1}, \ref{chap:kvs-2},
-              \ref{chap:logg-1}, \ref{chap:logg-2} and \ref{chap:logg-3}}
+              \ref{chap:kirby-7},
+              \ref{chap:kirby-6},
+              \ref{chap:kirby-5},
+              \ref{chap:logg-3},
+              \ref{chap:kirby-8},
+              \ref{chap:kirby-4},
+              \ref{chap:logg-2},
+              \ref{chap:logg-1},
+              \ref{chap:kirby-3},
+              \ref{chap:alnes-2},
+              \ref{chap:kvs-1} and
+              \ref{chap:kvs-2}}
 
 \fenicsauthor{Nuno D. Lopes}
              {ndl@ptmat.fc.ul.pt}
@@ -203,7 +218,7 @@
               Excellence grant from the Research Council of Norway to
               the Center for Biomedical Computing at Simula Research
               Laboratory.}
-             {Chapters \ref{chap:narayanan} and \ref{chap:kvs-1}}
+             {Chapters \ref{chap:kvs-1} and \ref{chap:narayanan}}
 
 \fenicsauthor{Murtazo Nazarov}
              {murtazo@csc.kth.se}
@@ -248,7 +263,10 @@
               the Center for Biomedical Computing at Simula Research
               Laboratory.}
              {Chapters
-              \ref{chap:logg-1}, \ref{chap:kirby-6}, \ref{chap:rognes} and \ref{chap:vynnytska}}
+              \ref{chap:kirby-6},
+              \ref{chap:logg-1},
+              \ref{chap:vynnytska} and
+              \ref{chap:rognes}}
 
 \fenicsauthor{Hans Joachim Schroll}
              {achim@imada.sdu.dk}
@@ -290,7 +308,10 @@
              {andy.terrel@gmail.com}
              {Enthought Inc., Austin, Texas, USA}
              {}
-             {Chapters \ref{chap:terrel}, \ref{chap:kirby-4} and \ref{chap:kirby-6}}
+             {Chapters
+              \ref{chap:kirby-6},
+              \ref{chap:kirby-4} and
+              \ref{chap:terrel}}
 
 \fenicsauthor{Lu{\'\i}s Trabucho}
              {trabucho@ptmat.fc.ul.pt}
@@ -319,9 +340,14 @@
              {gnw20@cam.ac.uk}
              {Department of Enginering, University of Cambridge, United Kingdom}
              {}
-             {Chapters \ref{chap:logg-1}, \ref{chap:logg-2}, \ref{chap:logg-3},
-              \ref{chap:nikbakht}, \ref{chap:oelgaard-1}, \ref{chap:oelgaard-2},
-              \ref{chap:terrel} and \ref{chap:wells}}
+             {Chapters
+              \ref{chap:logg-3},
+              \ref{chap:oelgaard-2},
+              \ref{chap:logg-2},
+              \ref{chap:logg-1},
+              \ref{chap:terrel},
+              \ref{chap:oelgaard-1} and
+              \ref{chap:nikbakht}}
 
 \fenicsauthor{Ilmar M. Wilbers}
              {ilmarw@simula.no}
@@ -338,5 +364,7 @@
              {This work is supported by the Netherlands Technology Foundation
               STW, the Netherlands Organisation for Scientific Research and the
               Ministry of Public Works and Water Management.}
-             {Chapters \ref{chap:oelgaard-2}, \ref{chap:oelgaard-1} and
-              \ref{chap:logg-1}}
+             {Chapters
+              \ref{chap:oelgaard-2},
+              \ref{chap:logg-1} and
+              \ref{chap:oelgaard-1}}
