--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Things to fix
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
 * Change order of chapters: FSI after F and S                               OK
 * Fix order of chapters in author list                                      OK
+* Fix remaining editornotes                                                 xx
 
 Things to check
 ---------------
