Some ref fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5934,44 +5934,12 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
 
 @ARTICLE{Orzag1971,
   author = {S. A. Orzag},
-  title = {Accurate solution of the Orr-Sommerfeld stability equation },
+  title = {Accurate solution of the {O}rr--{S}ommerfeld stability equation},
   journal = {J. Fluid Mech.},
   year = {1971},
   volume = {50},
-  pages = {689--703}
-}
-
-@ARTICLE{OsherSanders1983,
-  author = {S. Osher and R. Sanders},
-  title = {Numerical Approximations to Nonlinear Conservation Laws with Locally
-	Varying Time and Space Grids},
-  journal = {Math. Comp.},
-  year = {1983},
-  volume = {41},
-  pages = {321--336},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@ARTICLE{PaigeSaunders1975,
-  author = {C. C. Paige and M. A. Saunders},
-  title = {Solution of sparse indefinite systems of linear equations},
-  journal = {SIAM Journal on Numerical Analysis},
-  year = {1975},
-  volume = {12},
-  pages = {617--629}
-}
-
-@ARTICLE{PanditKalitaDalal2007,
-  author = {Pandit, Swapan K. and Kalita, Jiten C. and Dalal, D. C.},
-  title = {A transient higher order compact scheme for incompressible viscous
-	flows on geometries beyond rectangular},
-  journal = {J. Comput. Phys.},
-  year = {2007},
-  volume = {225},
-  pages = {1100--1124},
-  number = {1},
-  url = {http://dx.doi.org/10.1016/j.jcp.2007.01.016},
+  pages = {689--703},
+  url = {http://dx.doi.org/10.1017/S0022112071002842}
 }
 
 @BOOK{Panton1984,
@@ -5979,18 +5947,6 @@ journal = {Proceedings of the Royal Society of London. Series A: Mathematical, P
   publisher = {John Wiley \& Sons Inc},
   year = {1984},
   author = {Panton, R. L.}
-}
-
-@ARTICLE{PasciakWang2006,
-  author = {J. E. Pasciak and Y. Wang},
-  title = {A multigrid preconditioner for the mixed formulation of linear plane
-	elasticity},
-  journal = {SIAM Journal on Numerical Analysis},
-  year = {2006},
-  volume = {44},
-  pages = {478--493},
-  number = {2},
-  issn = {0036-1429}
 }
 
 @INPROCEEDINGS{PearlmutterSiskind2007,
