--- a/TODO
+++ b/TODO
@@ -35,6 +35,11 @@ Things to check
 * Use $nn\,\mathrm{mm}$ for quantitites                                     xx
 * Write the convective term in NS with \cdot?                               xx
 
+Things to decide
+----------------
+
+* Should we use the grey rules above/below figures?
+
 Not yet considered
 ------------------
 
