--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-%\fenicsinput{kirby-7}\end{document}
+\fenicsinput{hoffman-1}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
