Cleanup and expand definitions of figure sizes and use in many places. Will continue to edit figure sizes in remaining chapters.

--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-\fenicsinput{hoffman-1}\end{document}
+%\fenicsinput{vynnytska}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
