--- a/fenicsbook.cls
+++ b/fenicsbook.cls
@@ -145,6 +145,8 @@
 \newcommand{\largefig}{0.63\textwidth}     % for normal large figure
 \newcommand{\smallfig}{0.4\textwidth}      % for normal small figure
 \newcommand{\twofigs}{0.3\textwidth}       % for 1/2 of normal figure
+\newcommand{\threefigs}{0.2\textwidth}     % for 1/3 of normal figure
+\newcommand{\fourfigs}{0.2\textwidth}      % for 1/4 of normal figure
 \newcommand{\fullfig}{\textwidth}          % for full width figure
 \newcommand{\twofigsfull}{0.45\textwidth}  % for 1/2 of full width figure
 \newcommand{\threefigsfull}{0.3\textwidth} % for 1/3 of full width figure
