All figure dimensions now replaced by common dimension macros. Will now need to look through all chapters and see if individual adjustments are necessary.

--- a/TODO
+++ b/TODO
@@ -19,6 +19,7 @@ Things to check
 ---------------
 
 * No indentation of first line in code examples                            (AL)
+* Use \centering in figures, not \center                                    xx
 * No "," after "and" except when necessary                                  xx
 * There should be callouts in text to all floats                            xx
 * % accidentally included in paragraphs as a result of auto-fill            xx
