Change some \begin{center} --> \centering

--- a/TODO
+++ b/TODO
@@ -20,6 +20,7 @@ Things to check
 
 * No indentation of first line in code examples                            (AL)
 * Use \centering in figures, not \center                                    xx
+* Check that there are now warnings, missing labels or references           xx
 * No "," after "and" except when necessary                                  xx
 * There should be callouts in text to all floats                            xx
 * % accidentally included in paragraphs as a result of auto-fill            xx
