--- a/TODO
+++ b/TODO
@@ -13,7 +13,8 @@ Things to fix
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
 * Change order of chapters: FSI after F and S                               OK
 * Fix order of chapters in author list                                      OK
-* Fix remaining editornotes                                                 xx
+* Fix remaining editornotes                                                 OK
+* Make all chapters use common figure dimensions                            OK
 
 Things to check
 ---------------
@@ -37,18 +38,12 @@ Things to check
 * Use $nn\,\mathrm{mm}$ for quantitites                                     xx
 * Write the convective term in NS with \cdot?                               xx
 
-Things to decide
-----------------
-
-* Should we use the grey rules above/below figures?
-
 Not yet considered
 ------------------
 
 * Add http://dx.doi.org/xxxxx link for all papers in reference list, add
   for books too when available
 * Add some space around definition environment
-* Things to add to a notation section: \partial_n, \delta_{ij}
 * Common handling of www:foo references: author name or no author
   name. Looks strange when two packages are referenced together
   and one of them is written as the name of the package and the other
