Change all \center --> \centering

--- a/TODO
+++ b/TODO
@@ -15,12 +15,12 @@ Things to fix
 * Fix order of chapters in author list                                      OK
 * Fix remaining editornotes                                                 OK
 * Make all chapters use common figure dimensions                            OK
+* Use \centering in figures, not \center                                    OK
 
 Things to check
 ---------------
 
 * No indentation of first line in code examples                            (AL)
-* Use \centering in figures, not \center                                    xx
 * Check that there are now warnings, missing labels or references           xx
 * No "," after "and" except when necessary                                  xx
 * There should be callouts in text to all floats                            xx
