Update TODO list

--- a/TODO
+++ b/TODO
@@ -1,21 +1,24 @@
 Things to fix
 -------------
 
-* Use \center in floats (and not \begin{center} foo \end{center}           (AL)
+* Use \center in floats (and not \begin{center} foo \end{center}            OK
 * Fix width of C++ and Python code environments, seem different             OK
 * Remove chapter header when backmatter starts                              OK
 * Change "CG" to "Lagrange" everywhere                                      OK
 * Change color in hyperref to something less neon                           OK
 * Numbers very small in Palatino, 0 looks like o, see FFC chapter           OK
 * Add items to index, should be used in all chapters                        xx
-* Collect code examples for all chapters                                    xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
 * Change order of chapters: FSI after F and S                               OK
 * Fix order of chapters in author list                                      OK
 * Fix remaining editornotes                                                 OK
 * Make all chapters use common figure dimensions                            OK
-* Use \centering in figures, not \center                                    OK
+* Linebreaks in chapter titles                                              xx
+* Fix too long running titles                                               xx
+* Collect code examples for all chapters                                    xx
+* Collect copyright agreements for all chapters                            (KAM)
+* Complete Springer questionnaire                                          (GNW)
 
 Things to check
 ---------------
