Fix indentation of all code examples with particular focus on removing leading whitespaces.

--- a/TODO
+++ b/TODO
@@ -7,23 +7,24 @@ Things to fix
 * Change "CG" to "Lagrange" everywhere                                      OK
 * Change color in hyperref to something less neon                           OK
 * Numbers very small in Palatino, 0 looks like o, see FFC chapter           OK
-* Add items to index, should be used in all chapters                        xx
-* Use \toprule, \midrule, \bottomrule in tables                             xx
 * Fix strange / turning into \ in header for DOLFIN chapter                 OK
 * Change order of chapters: FSI after F and S                               OK
 * Fix order of chapters in author list                                      OK
 * Fix remaining editornotes                                                 OK
 * Make all chapters use common figure dimensions                            OK
+* Add items to index, should be used in all chapters                        xx
+* Use \toprule, \midrule, \bottomrule in tables                             xx
 * Linebreaks in chapter titles                                              xx
 * Fix too long running titles                                               xx
 * Collect code examples for all chapters                                    xx
 * Collect copyright agreements for all chapters                            (KAM)
 * Complete Springer questionnaire                                          (GNW)
+* No indentation of first line in code examples                            (AL)
+* Fix scheme environment                                                   (AL)
 
 Things to check
 ---------------
 
-* No indentation of first line in code examples                            (AL)
 * Check that there are now warnings, missing labels or references           xx
 * No "," after "and" except when necessary                                  xx
 * There should be callouts in text to all floats                            xx
