Update TODO list

--- a/TODO
+++ b/TODO
@@ -12,29 +12,26 @@ Things to fix
 * Fix order of chapters in author list                                      OK
 * Fix remaining editornotes                                                 OK
 * Make all chapters use common figure dimensions                            OK
+* No indentation of first line in code examples                             OK
+* Collect copyright agreements for all chapters                            (KAM)
+* Complete Springer questionnaire                                          (GNW)
+* Fix scheme environment                                                   (AL)
 * Add items to index, should be used in all chapters                        xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Linebreaks in chapter titles                                              xx
 * Fix too long running titles                                               xx
 * Collect code examples for all chapters                                    xx
-* Collect copyright agreements for all chapters                            (KAM)
-* Complete Springer questionnaire                                          (GNW)
-* No indentation of first line in code examples                            (AL)
-* Fix scheme environment                                                   (AL)
 
 Things to check
 ---------------
 
-* Check that there are now warnings, missing labels or references           xx
+* Check that there are no warnings, missing labels or references           xx
 * No "," after "and" except when necessary                                  xx
 * There should be callouts in text to all floats                            xx
 * % accidentally included in paragraphs as a result of auto-fill            xx
-* Always italics for Latin like a posteriori                                xx
 * Full names in author list                                                 xx
 * Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                           xx
 * Use of double quotes instead of single quote in code, including Python    xx
-* Check captions so they don't run into text                                xx
-* Check figure widths                                                       xx
 * Check use of : or , before formula                                        xx
 * Check bounding boxes for image files, some are very loose                 xx
 * Check that all references have archival links if not published            xx
@@ -47,7 +44,6 @@ Not yet considered
 
 * Add http://dx.doi.org/xxxxx link for all papers in reference list, add
   for books too when available
-* Add some space around definition environment
 * Common handling of www:foo references: author name or no author
   name. Looks strange when two packages are referenced together
   and one of them is written as the name of the package and the other
