Fix author names

--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Things to fix
 * Fix remaining editornotes                                                 OK
 * Make all chapters use common figure dimensions                            OK
 * No indentation of first line in code examples                             OK
+* Full names in author list                                                 OK
 * Collect copyright agreements for all chapters                            (KAM)
 * Complete Springer questionnaire                                          (GNW)
 * Fix scheme environment                                                   (AL)
@@ -29,7 +30,6 @@ Things to check
 * No "," after "and" except when necessary                                  xx
 * There should be callouts in text to all floats                            xx
 * % accidentally included in paragraphs as a result of auto-fill            xx
-* Full names in author list                                                 xx
 * Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                           xx
 * Use of double quotes instead of single quote in code, including Python    xx
 * Check use of : or , before formula                                        xx
