Fix scheme environment

--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@ Things to fix
 * Full names in author list                                                 OK
 * Collect copyright agreements for all chapters                            (KAM)
 * Complete Springer questionnaire                                          (GNW)
-* Fix scheme environment                                                   (AL)
+* Fix scheme environment                                                    OK
 * Add items to index, should be used in all chapters                        xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Linebreaks in chapter titles                                              xx
