Change may mind regarding how to write NS convective term. Write as is using matrix-vector product (without the \cdot)

--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ Things to fix
 * Collect copyright agreements for all chapters                            (KAM)
 * Complete Springer questionnaire                                          (GNW)
 * Fix scheme environment                                                    OK
+* Dont' write the convective term in NS with \cdot                          OK
 * Decide if all equations should be numbered                                xx
 * Add items to index, should be used in all chapters                        xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
@@ -37,7 +38,6 @@ Things to check
 * Check that all references have archival links if not published            xx
 * Use of "..." vs ``...''                                                   xx
 * Use $nn\,\mathrm{mm}$ for quantitites                                     xx
-* Write the convective term in NS with \cdot?                               xx
 
 Not yet considered
 ------------------
