Decide that all equations should be numbered. GNW has already convinced me of that before: it essentially fills the same function as page numbers and makes it possible to refer to specific equations when reporting typos etc (eq can have an external reference without having an internal).

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-Things to fix
--------------
+Things to fix before submitting
+-------------------------------
 
 * Use \center in floats (and not \begin{center} foo \end{center}            OK
 * Fix width of C++ and Python code environments, seem different             OK
@@ -14,16 +14,19 @@ Things to fix
 * Make all chapters use common figure dimensions                            OK
 * No indentation of first line in code examples                             OK
 * Full names in author list                                                 OK
-* Collect copyright agreements for all chapters                            (KAM)
-* Complete Springer questionnaire                                          (GNW)
+* Fix too long running titles                                               OK
 * Fix scheme environment                                                    OK
 * Dont' write the convective term in NS with \cdot                          OK
-* Decide if all equations should be numbered                                xx
 * Add items to index, should be used in all chapters                        xx
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Linebreaks in chapter titles                                              xx
-* Fix too long running titles                                               OK
-* Collect code examples for all chapters                                    xx
+* Complete Springer questionnaire                                          (GNW)
+
+Things to fix after submitting
+------------------------------
+
+* Collect code examples for all chapters                                   (ALL)
+* Collect copyright agreements for all chapters                            (KAM)
 
 Things to check
 ---------------
