Fix a missing chapter reference and adjust order of chapter references in [kirby-7]

--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@ Things to fix before submitting
 * Use \toprule, \midrule, \bottomrule in tables                             xx
 * Linebreaks in chapter titles                                              xx
 * Complete Springer questionnaire                                          (GNW)
+* Check order of references when referring to multiple chapters             xx
 
 Things to fix after submitting
 ------------------------------
