Update TODO list after discussion with Kent

--- a/TODO
+++ b/TODO
@@ -17,38 +17,35 @@ Things to fix before submitting
 * Fix too long running titles                                               OK
 * Fix scheme environment                                                    OK
 * Dont' write the convective term in NS with \cdot                          OK
-* Add items to index, should be used in all chapters                        xx
-* Use \toprule, \midrule, \bottomrule in tables                             xx
-* Linebreaks in chapter titles                                              xx
-* Complete Springer questionnaire                                          (GNW)
-* Check order of references when referring to multiple chapters             xx
+* Use \toprule, \midrule, \bottomrule in tables                            (AL)
+* Linebreaks in chapter titles                                             (AL)
+* Check order of references when referring to multiple chapters            (AL)
+* Check that there are no warnings, missing labels or references           (AL)
+* Check for % accidentally included in paragraphs as a result of auto-fill (AL)
+* Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                          (AL)
+* Use of double quotes instead of single quote in code, including Python   (AL)
+* Use of "..." vs ``...''                                                  (AL)
+* Complete Springer questionnaire                                          (eds)
+* Read through first part of all chapters                                  (eds)
+* Browse through entire book and look for obvious problems                 (eds)
 
-Things to fix after submitting
-------------------------------
+Things to fix by editors after submitting
+-----------------------------------------
 
 * Collect code examples for all chapters                                   (ALL)
 * Collect copyright agreements for all chapters                            (KAM)
 
-Things to check
----------------
+Things to be checked by Springer during proofreading
+----------------------------------------------------
 
-* Check that there are no warnings, missing labels or references            xx
 * No "," after "and" except when necessary                                  xx
-* There should be callouts in text to all floats                            xx
-* % accidentally included in paragraphs as a result of auto-fill            xx
-* Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                           xx
-* Use of double quotes instead of single quote in code, including Python    xx
-* Check use of : or , before formula                                        xx
-* Check that all references have archival links if not published            xx
-* Use of "..." vs ``...''                                                   xx
-* Use $nn\,\mathrm{mm}$ for quantitites                                     xx
+* Check typesetting of units, should not be italics: $x.y\,\mathrm{unit}$   xx
+* Check references                                                          xx
+* Check for callouts to all floats                                          xx
 
-Not yet considered
-------------------
+Things to fix by authors when reading proofs from Springer
+----------------------------------------------------------
 
-* Add http://dx.doi.org/xxxxx link for all papers in reference list, add
-  for books too when available
-* Common handling of www:foo references: author name or no author
-  name. Looks strange when two packages are referenced together
-  and one of them is written as the name of the package and the other
-  the name of the author.
+* Read proofs carefully                                                     xx
+* Add items to index                                                        xx
+* Update all code examples to DOLFIN 1.0                                    xx
