Fix compile error and units in [hentschel]

--- a/TODO
+++ b/TODO
@@ -28,6 +28,7 @@ Things to fix before submitting
 * Complete Springer questionnaire                                          (eds)
 * Read through first part of all chapters                                  (eds)
 * Browse through entire book and look for obvious problems                 (eds)
+* Run final check: check.sh, proofread.sh, spellcheck.sh                   (AL)
 
 Things to fix by editors after submitting
 -----------------------------------------
