--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-%\fenicsinput{kvs-1}\end{document}
+\fenicsinput{hentschel}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
