Add missing reference, all warnings (that we care about) removed now

--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ Things to fix before submitting
 * Fix too long running titles                                               OK
 * Fix scheme environment                                                    OK
 * Dont' write the convective term in NS with \cdot                          OK
+* Add back full titles in tableofcontents, but not in headers              (AL)
 * Check that there are no warnings, missing labels or references           (AL)
 * Check for % accidentally included in paragraphs as a result of auto-fill (AL)
 * Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                          (AL)
