--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@article{PanditKalitaDalal2007,
+  title={A transient higher order compact scheme for incompressible viscous flows on geometries beyond rectangular},
+  author={S. K. Pandit and J. C. Kalita and D. C Dalal},
+  journal={Journal of Computational Physics},
+  volume={225},
+  number={1},
+  pages={1100--1124},
+  year={2007},
+}
+
 @Article{Mortensen2011,
   Author         = {M. Mortensen and H. P. Langtangen and G. N. Wells},
   Title = {A {FEniCS}-Based Programming Framework for Modeling Turbulent
