Check another item on list

--- a/TODO
+++ b/TODO
@@ -18,8 +18,8 @@ Things to fix before submitting
 * Fix scheme environment                                                    OK
 * Dont' write the convective term in NS with \cdot                          OK
 * Check that there are no warnings, missing labels or references            OK
+* Check for % accidentally included in paragraphs as a result of auto-fill  OK
 * Add back full titles in tableofcontents, but not in headers              (AL)
-* Check for % accidentally included in paragraphs as a result of auto-fill (AL)
 * Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                          (AL)
 * Use \toprule, \midrule, \bottomrule in tables                            (AL)
 * Linebreaks in chapter titles                                             (AL)
