Fix Gamma_D/N item in TODO list

--- a/TODO
+++ b/TODO
@@ -19,8 +19,8 @@ Things to fix before submitting
 * Dont' write the convective term in NS with \cdot                          OK
 * Check that there are no warnings, missing labels or references            OK
 * Check for % accidentally included in paragraphs as a result of auto-fill  OK
+* Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                           OK
 * Add back full titles in tableofcontents, but not in headers              (AL)
-* Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                          (AL)
 * Use \toprule, \midrule, \bottomrule in tables                            (AL)
 * Linebreaks in chapter titles                                             (AL)
 * Check order of references when referring to multiple chapters            (AL)
