--- a/TODO
+++ b/TODO
@@ -21,9 +21,9 @@ Things to fix before submitting
 * Check for % accidentally included in paragraphs as a result of auto-fill  OK
 * Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                           OK
 * Add back full titles in tableofcontents, but not in headers               OK
+* Check order of references when referring to multiple chapters             OK
 * Use \toprule, \midrule, \bottomrule in tables                            (AL)
 * Linebreaks in chapter titles                                             (AL)
-* Check order of references when referring to multiple chapters            (AL)
 * Use of double quotes instead of single quote in code, including Python   (AL)
 * Use of "..." vs ``...''                                                  (AL)
 * Complete Springer questionnaire                                          (eds)
