Use booktabs commands (toprule, midrule, bottomrule) in all tables

--- a/TODO
+++ b/TODO
@@ -22,7 +22,7 @@ Things to fix before submitting
 * Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}                           OK
 * Add back full titles in tableofcontents, but not in headers               OK
 * Check order of references when referring to multiple chapters             OK
-* Use \toprule, \midrule, \bottomrule in tables                            (AL)
+* Use \toprule, \midrule, \bottomrule in tables                             OK
 * Linebreaks in chapter titles                                             (AL)
 * Use of double quotes instead of single quote in code, including Python   (AL)
 * Use of "..." vs ``...''                                                  (AL)
