--- a/book.tex
+++ b/book.tex
@@ -35,7 +35,7 @@
 
 %------------------------------------------------------------------------------
 % For testing
-\fenicsinput{oelgaard-2}\end{document}
+%\fenicsinput{oelgaard-2}\end{document}
 
 %------------------------------------------------------------------------------
 % Chapters
