Update TODO list

--- a/TODO
+++ b/TODO
@@ -23,7 +23,7 @@ Things to fix before submitting
 * Add back full titles in tableofcontents, but not in headers               OK
 * Check order of references when referring to multiple chapters             OK
 * Use \toprule, \midrule, \bottomrule in tables                             OK
-* Linebreaks in chapter titles                                             (AL)
+* Linebreaks in chapter titles                                              OK
 * Use of double quotes instead of single quote in code, including Python   (AL)
 * Use of "..." vs ``...''                                                  (AL)
 * Complete Springer questionnaire                                          (eds)
